@@ -1,5 +1,5 @@
 //
-// "$Id: fl_boxtype.cxx,v 1.8.2.4.2.6 2001/12/16 12:37:02 easysw Exp $"
+// "$Id: fl_boxtype.cxx,v 1.8.2.4.2.7 2001/12/17 01:16:48 easysw Exp $"
 //
 // Box drawing code for the Fast Light Tool Kit (FLTK).
 //
@@ -223,7 +223,7 @@ static struct {
   {fl_border_frame,	1,1,2,2,0}, // _FL_OVAL_FRAME
   {fl_rectf,		0,0,0,0,0}, // _FL_OVAL_FLAT_BOX,
   {fl_up_box,		4,4,8,8,0}, // _FL_PLASTIC_UP_BOX,
-  {fl_down_box,		4,4,8,8,0}, // _FL_PLASTIC_DOWN_BOX,
+  {fl_down_box,		2,2,4,4,0}, // _FL_PLASTIC_DOWN_BOX,
   {fl_up_frame,		2,2,4,4,0}, // _FL_PLASTIC_UP_FRAME,
   {fl_down_frame,	2,2,4,4,0}, // _FL_PLASTIC_DOWN_FRAME,
   {fl_up_box,		3,3,6,6,0}, // FL_FREE_BOX+0
@@ -291,5 +291,5 @@ const {
 }
 
 //
-// End of "$Id: fl_boxtype.cxx,v 1.8.2.4.2.6 2001/12/16 12:37:02 easysw Exp $".
+// End of "$Id: fl_boxtype.cxx,v 1.8.2.4.2.7 2001/12/17 01:16:48 easysw Exp $".
 //
